<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/work_item_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:padding="10dp">

            <TextView
                android:id="@+id/work_item_profname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/baloo"
                android:text="@string/sample_profname"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/work_item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/work_item_date"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/baloo"
                android:text="@string/sample_itemcategory"/>

            <TextView
                android:id="@+id/work_item_issuedesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/work_item_category"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/baloo"
                android:layout_marginTop="3dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:text="@string/sample_issue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/work_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/work_item_profname"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/baloo"
                android:text="@string/sample_respdate"/>

            <TextView
                android:id="@+id/work_item_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/baloo"
                android:text="@string/sample_response"
               />

            <LinearLayout
                android:id="@+id/work_itemb_btnlayout"
                android:layout_below="@+id/work_item_issuedesc"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="35dp">

                <Button
                    android:id="@+id/work_item_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:layout_marginEnd="10dp" />

                <Button
                    android:id="@+id/work_item_review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assign_review"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:transitionName="transition_proSignup"/>
            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>