<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10sp"
    app:cardCornerRadius="6dp"
    app:cardElevation="8dp"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/allcategories_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:padding="5dp">

        <TextView
            android:id="@+id/review_main_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/sample_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/review_main_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@id/review_main_ratingbar"
            android:fontFamily="@font/baloo"
            android:text="@string/sample_itemcategory"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/review_main_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_main_userissue"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/sample_issue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/review_main_userissue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_main_category"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/baloo"
            android:layout_marginTop="5dp"
            android:text="@string/sample_issue_short"
            android:textSize="13sp" />

        <RatingBar
            android:id="@+id/review_main_ratingbar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:progressTint="@color/colorPrimary"
            android:layout_below="@id/review_main_fullname"
            android:layout_marginStart="10dp"
            android:rating="3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/review_main_buttonsend"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/baloo"
            android:text="@string/review_us"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>